# h3oh3o

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  README.md  build.rs  cbindgen.toml
.github/workflows/: ci.yml
h3tests/: CMakeLists.txt  README.md
h3tests/benchmarks/: CMakeLists.txt  benchmarkCellToChildren.c  benchmarkCellsToLinkedMultiPolygon.c  benchmarkDirectedEdge.c  benchmarkGridDiskCells.c  benchmarkGridPathCells.c  benchmarkIsValidCell.c  benchmarkPolygonToCells.c  benchmarkVertex.c
h3tests/common/: CMakeLists.txt  algos.c  algos.h  baseCells.c  baseCells.h  bbox.c  bbox.h  coordijk.c  coordijk.h  faceijk.h  h3Index.c  h3Index.h  iterators.c  iterators.h  latLng.c  latLng.h  linkedGeo.c  linkedGeo.h  utility.c  utility.h
h3tests/tests/: CMakeLists.txt
h3tests/tests/src/: test.c  testBaseCells.c  testCellToCenterChild.c  testCellToChildPos.c  testCellToLatLng.c  testCellsToLinkedMultiPolygon.c  testGridDisk.c  testGridDisksUnsafe.c  testGridRingUnsafe.c  testLatLng.c  testLatLngToCell.c  testPolygonToCells.c  testPolygonToCellsReported.c
src/: boundary.rs  cell.rs  compact.rs  convert.rs  directed_edge.rs  error.rs  geom.rs  grid.rs  latlng.rs  lib.rs  localij.rs  resolution.rs  vertex.rs
