[package]
name = "h3oh3o"
version = "0.3.1"
authors = ["Sylvain Laperche <sylvain.laperche@gmail.com>"]
edition = "2021"
description = "An h3o wrapper that expose a C API compatible with h3."
build = "build.rs"
documentation = "https://docs.rs/h3oh3o/"
readme = "README.md"
homepage = "https://docs.rs/h3oh3o"
repository = "https://github.com/HydroniumLabs/h3oh3o"
license = "BSD-3-Clause"
keywords = ["geography", "geospatial", "gis", "h3", "spatial-index"]
categories = ["science::geo"]
publish = false

[package.metadata.release]
pre-release-commit-message = "release {{version}}"
pre-release-replacements = [
  {file="CHANGELOG.md", search="Unreleased", replace="{{version}}", min=1},
  {file="CHANGELOG.md", search="ReleaseDate", replace="{{date}}", min=1},
  {file="CHANGELOG.md", search="<!-- next-header -->", replace="<!-- next-header -->\n## [Unreleased] - ReleaseDate\n", exactly=1},
]

[dependencies]
h3o = { version = "0.4", default-features = false, features = ["geo"] }
geo-types = {version = "0.7", default-features = false }

[build-dependencies]
cbindgen = "0.24"

[lib]
crate-type = ["cdylib", "staticlib"]

[profile.release]
lto = "thin"
